--- a/nx.json
+++ b/nx.json
@@ -29,5 +29,18 @@
       }
     ]
   },
-  "defaultProject": "backend"
+  "defaultProject": "backend",
+  "generators": {
+    "@nrwl/react": {
+      "application": {
+        "babel": true
+      }
+    },
+    "@nrwl/next": {
+      "application": {
+        "style": "scss",
+        "linter": "eslint"
+      }
+    }
+  }
 }
